Header border fix on mobile

--- a/src/components/EmailSnippet/EmailSnippet.css
+++ b/src/components/EmailSnippet/EmailSnippet.css
@@ -19,7 +19,10 @@ tr {
     grid-template-rows: 36% 24% 40%;
     grid-template-columns: 5% 4% 63% 18% 10%;
 
-        border-bottom: 2px solid #e7e7e7;
+    border-bottom: 2px solid #e7e7e7;
+}
+.angry-grid:hover {
+    background-color: #f7f9fa;
 }
 
 #item-0 {
